@@ -8,6 +8,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.ComponentScan;
 import quotes.common.Options;
 import quotes.common.model.Quote;
+import quotes.common.model.RandomRequest;
 import quotes.common.model.Subscription;
 import quotes.requester.QuotesProxy;
 import quotes.requester.SentimentProxy;
@@ -15,15 +16,12 @@ import quotes.responder.QuotesApplication;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
-import java.util.Arrays;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static quotes.common.Constants.CHAT_GPT_SENTIMENT_ANALYSIS;
-import static quotes.common.Constants.CORE_NLP_SENTIMENT_ANALYSIS;
 
 /**
  * This class implements a test program that obtains famous quotes
@@ -72,6 +70,11 @@ public class QuotesTest {
     private SentimentProxy mSentimentProxy;
 
     /**
+     * The number of random Shakespeare quotes to process.
+     */
+    private final int mNUMBER_OF_INDICES = 2;
+
+    /**
      * Initialize the {@link Options} singleton.
      */
     @BeforeAll
@@ -90,7 +93,7 @@ public class QuotesTest {
      * Quote} object containing the sentiment analysis.
      */
     @SuppressWarnings("CallingSubscribeInNonBlockingScope")
-    @Test
+    // @Test
     public void testAnalyzeAllQuotes() {
         Options.debug(TAG, ">>> Entering testAnalyzeAllQuotes()");
 
@@ -107,7 +110,7 @@ public class QuotesTest {
             // Deal with ChatGPT rate limiting..
             .take(Options.instance().totalNumberOfQuotes())
 
-            // Analyze the sentiment of each Hamlet Quote.
+            // Analyze the sentiment of each Shakespeare Quote.
             .flatMap(quote -> mSentimentProxy
                 // .getSentiment(CORE_NLP_SENTIMENT_ANALYSIS,
                 .getSentiment(CHAT_GPT_SENTIMENT_ANALYSIS,
@@ -137,6 +140,86 @@ public class QuotesTest {
     }
 
     /**
+     * Get/print/test that a given number of random Shakespeare quotes
+     * are received, requiring the client to subscribe first.
+     * 
+     * This method demonstrates the RSocket two-way async
+     * request/stream channel model where a non-reactive {@link
+     * RandomRequest} object is sent to the server and the server
+     * returns a {@link Flux} in response.
+     */
+    @SuppressWarnings("CallingSubscribeInNonBlockingScope")
+    @Test
+    public void testGetRandomQuotesSubscribed() {
+        Options.print(TAG,
+                      ">>> Entering testGetRandomQuotesSubscribed()");
+
+        var randomIndicesM = mQuotesProxy
+            // Make random indices needed for the test.
+            .makeRandomIndices(mNUMBER_OF_INDICES);
+
+        // Get the array emitted by the randomIndices().
+        var randomIndices = randomIndicesM
+            // Block until we get it.
+            .block();
+
+        // Get a confirmed Subscription from the server.
+        var subscription = mQuotesProxy
+            // Subscribe using a random ID.
+            .subscribe(UUID.randomUUID(),
+                       "")
+
+            // Print the results as a diagnostic.
+            .doOnNext(sr ->
+                      Options.debug(TAG, "subscribe-returned::"
+                                    + sr.requestId()
+                                    + ":" + sr.status()))
+
+            // Wait for the Subscription.
+            .block();
+
+        // Get a Flux that emits random Shakespeare quotes from the
+        // responder.
+        var bardQuotes = mQuotesProxy
+            // Create a Flux that emits Shakespeare quotes at the
+            // random indices emitted by the bardQuotes Flux.
+            .getRandomQuotesSubscribed
+            (new RandomRequest(subscription,
+                               randomIndices))
+
+            /*
+            // Analyze the sentiment of each Shakespeare Quote.
+            .flatMap(quote -> mSentimentProxy
+                     .getSentiment(CHAT_GPT_SENTIMENT_ANALYSIS,
+                                   quote))
+            */
+
+            // Output the Quote objects together with the results of
+            // the sentiment analysis.
+            .doOnNext(quote -> Options
+                .debug(TAG, "The sentiment analysis of the quote\n\""
+                    + quote.getQuote()
+                    + "\"\nfrom \""
+                    + quote.getPlay()
+                    + "\" is as follows:\n'"
+                       // + formatSentiment(quote.getSentiment(), 70)
+                    + "'"))
+
+            // Cancel the Subscription when all processing is
+            // complete.
+            .doFinally(signalType -> mQuotesProxy
+                .cancelUnconfirmed(Mono
+                    .just(subscription))
+                .subscribe())
+
+            // Wait until all processing is done.
+            .blockLast();
+
+        Options.print(TAG,
+                      "<<< Leaving testGetRandomQuotesSubscribed()");
+    }
+
+    /**
      * Adds newlines to a string to fit within a specified width.
      * Newlines are added only between words, not within words.
      *
@@ -148,20 +231,33 @@ public class QuotesTest {
                                          int lineLength) {
         // Create a string builder to store the result
         StringBuilder sb = new StringBuilder();
-        // Split the input string into words using a regular expression that matches any non-word character preceded by any character
+
         List<String> lines = Stream
+            // Split the 'sentiment' string into words using a regular
+            // expression that matches any non-word character preceded
+            // by any character.
             .of(sentiment.split("(?<=\\W)"))
-            // Group the words into lines based on the maximum line length
+
+            // Group the words into lines based on the maximum line
+            // length.
             .collect(Collectors
-                .groupingBy(s -> sb.append(s).length() / lineLength))
-            // Get the values of the grouping map (i.e., the words in each line)
+                     .groupingBy(s -> sb.append(s).length() / lineLength))
+
+            // Get the values of the grouping map (i.e., the words in
+            // each line).
             .values()
-            // Join the words in each line into a string
+
+            // Convert the Collection to a Stream.
             .stream()
+
+            // Join the words in each line into a String.
             .map(list -> String.join("", list))
-            // Collect the lines into a list
-            .collect(Collectors.toList());
-        // Join the lines with the system line separator and return the result
+
+            // Collect the lines into a List.
+            .toList();
+
+        // Join the lines with the system line separator and return
+        // the result.
         return String.join(System.lineSeparator(), lines);
     }
 
